Polished the output a bit

--- a/create-protonmail-bridge-system.yml
+++ b/create-protonmail-bridge-system.yml
@@ -9,14 +9,17 @@
 # to use with the Let's Encrypt SSL certificate registration.
 #
 runcmd:
-  - apt-get update >/dev/tty1 2>&1
-  - apt-get install -y curl ufw >/dev/tty1 2>&1
-  - ufw allow ssh >/dev/tty1 2>&1
-  - ufw allow http >/dev/tty1 2>&1
-  - ufw allow 993 >/dev/tty1 2>&1
-  - ufw allow 587 >/dev/tty1 2>&1
-  - ufw enable >/dev/tty1 2>&1
-  - apt-get upgrade -y >/dev/tty1 2>&1
+  - sleep 6
+  - echo "\n\n\nBeginning installation and configuration of Proton Mail Bridge.\n\n" >/dev/tty1
+  - sleep 2
+  - apt-get update >/dev/null 2>&1
+  - apt-get install -y curl ufw >/dev/null 2>&1
+  - ufw allow ssh >/dev/null 2>&1
+  - ufw allow http >/dev/null 2>&1
+  - ufw allow 993 >/dev/null 2>&1
+  - ufw allow 587 >/dev/null 2>&1
+  - ufw enable >/dev/null 2>&1
+  - apt-get upgrade -y >/dev/null 2>&1
   - echo "#!/bin/bash\n/root/create-protonmail-bridge-system.sh 'proton-bridge.your-domain.com' 'you@your-domain.com'" >/root/create-protonmail-bridge-system-with-args.sh
   - chmod 700 /root/create-protonmail-bridge-system-with-args.sh
   - curl -Ls https://raw.githubusercontent.com/mattx86/protonmail-bridge-cloud-config/main/create-protonmail-bridge-system.sh -o /root/create-protonmail-bridge-system.sh
